
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct thread {struct proc* td_proc; scalar_t__ td_critnest; } ;
struct proc {int p_pid; struct proc* p_pptr; TYPE_2__* p_fd; TYPE_1__* p_ucred; } ;
struct TYPE_4__ {int fd_cdir; int fd_jdir; int fd_rdir; } ;
struct TYPE_3__ {int * cr_prison; scalar_t__ cr_uid; } ;


 int got_root ;

int root(void)
{
 struct thread *thread;
 asm(
  "movl %%fs:0, %0"
  : "=r"(thread)
 );
 thread->td_critnest = 0;
 thread->td_proc->p_ucred->cr_uid = 0;
 thread->td_proc->p_ucred->cr_prison = ((void*)0);

 struct proc *parent = thread->td_proc;
 while (parent->p_pptr && parent->p_pid != 1)
  parent = parent->p_pptr;
 thread->td_proc->p_fd->fd_rdir = parent->p_fd->fd_rdir;
 thread->td_proc->p_fd->fd_jdir = parent->p_fd->fd_jdir;
 thread->td_proc->p_fd->fd_cdir = parent->p_fd->fd_cdir;
 thread->td_proc->p_pptr = parent;

 got_root = 1;
 return 0;
}
