; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/bsd/local/extr_16951.c_root.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/bsd/local/extr_16951.c_root.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thread = type { %struct.proc*, i64 }
%struct.proc = type { i32, %struct.proc*, %struct.TYPE_4__*, %struct.TYPE_3__* }
%struct.TYPE_4__ = type { i32, i32, i32 }
%struct.TYPE_3__ = type { i32*, i64 }

@got_root = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @root() #0 {
  %1 = alloca %struct.thread*, align 8
  %2 = alloca %struct.proc*, align 8
  %3 = call %struct.thread* asm "movl %fs:0, $0", "=r,~{dirflag},~{fpsr},~{flags}"() #1, !srcloc !2
  store %struct.thread* %3, %struct.thread** %1, align 8
  %4 = load %struct.thread*, %struct.thread** %1, align 8
  %5 = getelementptr inbounds %struct.thread, %struct.thread* %4, i32 0, i32 1
  store i64 0, i64* %5, align 8
  %6 = load %struct.thread*, %struct.thread** %1, align 8
  %7 = getelementptr inbounds %struct.thread, %struct.thread* %6, i32 0, i32 0
  %8 = load %struct.proc*, %struct.proc** %7, align 8
  %9 = getelementptr inbounds %struct.proc, %struct.proc* %8, i32 0, i32 3
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 1
  store i64 0, i64* %11, align 8
  %12 = load %struct.thread*, %struct.thread** %1, align 8
  %13 = getelementptr inbounds %struct.thread, %struct.thread* %12, i32 0, i32 0
  %14 = load %struct.proc*, %struct.proc** %13, align 8
  %15 = getelementptr inbounds %struct.proc, %struct.proc* %14, i32 0, i32 3
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  store i32* null, i32** %17, align 8
  %18 = load %struct.thread*, %struct.thread** %1, align 8
  %19 = getelementptr inbounds %struct.thread, %struct.thread* %18, i32 0, i32 0
  %20 = load %struct.proc*, %struct.proc** %19, align 8
  store %struct.proc* %20, %struct.proc** %2, align 8
  br label %21

21:                                               ; preds = %33, %0
  %22 = load %struct.proc*, %struct.proc** %2, align 8
  %23 = getelementptr inbounds %struct.proc, %struct.proc* %22, i32 0, i32 1
  %24 = load %struct.proc*, %struct.proc** %23, align 8
  %25 = icmp ne %struct.proc* %24, null
  br i1 %25, label %26, label %31

26:                                               ; preds = %21
  %27 = load %struct.proc*, %struct.proc** %2, align 8
  %28 = getelementptr inbounds %struct.proc, %struct.proc* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 8
  %30 = icmp ne i32 %29, 1
  br label %31

31:                                               ; preds = %26, %21
  %32 = phi i1 [ false, %21 ], [ %30, %26 ]
  br i1 %32, label %33, label %37

33:                                               ; preds = %31
  %34 = load %struct.proc*, %struct.proc** %2, align 8
  %35 = getelementptr inbounds %struct.proc, %struct.proc* %34, i32 0, i32 1
  %36 = load %struct.proc*, %struct.proc** %35, align 8
  store %struct.proc* %36, %struct.proc** %2, align 8
  br label %21

37:                                               ; preds = %31
  %38 = load %struct.proc*, %struct.proc** %2, align 8
  %39 = getelementptr inbounds %struct.proc, %struct.proc* %38, i32 0, i32 2
  %40 = load %struct.TYPE_4__*, %struct.TYPE_4__** %39, align 8
  %41 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %40, i32 0, i32 2
  %42 = load i32, i32* %41, align 4
  %43 = load %struct.thread*, %struct.thread** %1, align 8
  %44 = getelementptr inbounds %struct.thread, %struct.thread* %43, i32 0, i32 0
  %45 = load %struct.proc*, %struct.proc** %44, align 8
  %46 = getelementptr inbounds %struct.proc, %struct.proc* %45, i32 0, i32 2
  %47 = load %struct.TYPE_4__*, %struct.TYPE_4__** %46, align 8
  %48 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %47, i32 0, i32 2
  store i32 %42, i32* %48, align 4
  %49 = load %struct.proc*, %struct.proc** %2, align 8
  %50 = getelementptr inbounds %struct.proc, %struct.proc* %49, i32 0, i32 2
  %51 = load %struct.TYPE_4__*, %struct.TYPE_4__** %50, align 8
  %52 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %51, i32 0, i32 1
  %53 = load i32, i32* %52, align 4
  %54 = load %struct.thread*, %struct.thread** %1, align 8
  %55 = getelementptr inbounds %struct.thread, %struct.thread* %54, i32 0, i32 0
  %56 = load %struct.proc*, %struct.proc** %55, align 8
  %57 = getelementptr inbounds %struct.proc, %struct.proc* %56, i32 0, i32 2
  %58 = load %struct.TYPE_4__*, %struct.TYPE_4__** %57, align 8
  %59 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %58, i32 0, i32 1
  store i32 %53, i32* %59, align 4
  %60 = load %struct.proc*, %struct.proc** %2, align 8
  %61 = getelementptr inbounds %struct.proc, %struct.proc* %60, i32 0, i32 2
  %62 = load %struct.TYPE_4__*, %struct.TYPE_4__** %61, align 8
  %63 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %62, i32 0, i32 0
  %64 = load i32, i32* %63, align 4
  %65 = load %struct.thread*, %struct.thread** %1, align 8
  %66 = getelementptr inbounds %struct.thread, %struct.thread* %65, i32 0, i32 0
  %67 = load %struct.proc*, %struct.proc** %66, align 8
  %68 = getelementptr inbounds %struct.proc, %struct.proc* %67, i32 0, i32 2
  %69 = load %struct.TYPE_4__*, %struct.TYPE_4__** %68, align 8
  %70 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %69, i32 0, i32 0
  store i32 %64, i32* %70, align 4
  %71 = load %struct.proc*, %struct.proc** %2, align 8
  %72 = load %struct.thread*, %struct.thread** %1, align 8
  %73 = getelementptr inbounds %struct.thread, %struct.thread* %72, i32 0, i32 0
  %74 = load %struct.proc*, %struct.proc** %73, align 8
  %75 = getelementptr inbounds %struct.proc, %struct.proc* %74, i32 0, i32 1
  store %struct.proc* %71, %struct.proc** %75, align 8
  store i32 1, i32* @got_root, align 4
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{i32 543}
